# snakemake-web-api

./: .gitignore  CLI_COMMANDS.md  Developer_Guide.md  Dockerfile  GEMINI.md  README.md  TROUBLESHOOTING.md  build_image_to_habor.sh  job-template.yaml  mcp_dockerfile  pyproject.toml  rebuild_and_run.sh  refactored.md  run_demo_workflow.sh  run_demo_wrapper.sh  samples.tsv
configs/: kubeconfig
llm/: portable-workflow.txt
repos/snakemake-logger-plugin-supabase/: README.md  pyproject.toml  snakemake_plugin.yaml
repos/snakemake-logger-plugin-supabase/src/snakemake_logger_plugin_supabase/: __init__.py  plugin.py  settings.py
repos/snakemake-logger-plugin-supabase/src/snakemake_logger_plugin_supabase/db/: db_factory.py  db_interface.py  supabase_impl.py
repos/snakemake-logger-plugin-supabase/src/test/: db_test.py
src/snakemake_mcp_server/: demo_runner.py  fastapi_app.py  jobs.py  schemas.py  server.py  snakefile_parser.py  utils.py  workflow_runner.py  wrapper_runner.py  wrapper_runner_k8s.py
tests/: conftest.py  test_all_wrapper_demos_integration.py  test_first_wrapper_demo.py  test_get_wrapper_meta_api.py  test_get_wrapper_meta_security.py  test_k8s_config.py  test_list_jobs.py  test_list_tools.py  test_list_wrappers_api.py  test_mcp_api_integration.py  test_megahit_wrapper.py  test_rest_api_integration.py  test_run_wrapper_error.py  test_run_wrapper_success.py  test_shadow_wrapper.py  test_single_wrapper_api_demo.py  test_snakefile_conversion.py  test_snakefile_parser.py  test_workflow_api.py  test_workflow_execution.py  test_wrapper_api_completeness.py  test_wrapper_demos_integration.py  test_wrapper_logic_integration.py  test_wrapper_runner.py  test_wrapper_runner_directly.py
(+14 files in other folders)
