[project]
name = "snakemake-web-api"
version = "1.0.0"
description = "Web API for running Snakemake workflows and wrappers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "snakemake",
    "click",
    "snakemake-wrapper-utils>=0.8.0",
    "pandas>=2.3.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
"snakemake-web-api" = "snakemake_mcp_server.server:cli"
"swa" = "snakemake_mcp_server.server:cli"

[project.urls]
"Homepage" = "https://github.com/excelwang/snakemake-web-api"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
