[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakemake-logger-plugin-supabase"
version = "0.1.0"
description = "Snakemake logger plugin that sends logs to Supabase"
readme = "README.md"
authors = [{ name = "cheney", email = "xflv@cnic.cn" }]
requires-python = ">=3.11"
keywords = ["snakemake", "plugin", "logger", "supabase", "workflow"]
dependencies = [
    "snakemake>=9.6.2",
    "snakemake-interface-logger-plugins>=2.0.0",
    "supabase>=2.3.0",
]

[project.entry-points."snakemake_logger_plugins"]
supabase = "snakemake_logger_plugin_supabase:LogHandler"

[project.scripts]
flowo = "snakemake_logger_plugin_supabase.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["snakemake_logger_plugin_supabase"]